--- a/FrontEnd/sass/5-Pages/_header.scss
+++ b/FrontEnd/sass/5-Pages/_header.scss
@@ -1,3 +1,19 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+// Logo 
+
+.logoPosition {
+    display: flex;
+    justify-content: center;
+}
+
+.logo {
+    width: 640px;
+    height: 320px;
+}
+
 // Barre de navigation 
 
 .navMenu {
@@ -26,3 +42,4 @@ a {
     } 
 
 }
+
