--- a/FrontEnd/sass/1-Base/_typography.scss
+++ b/FrontEnd/sass/1-Base/_typography.scss
@@ -9,3 +9,11 @@ body {
 li {
     font-family: "Otomanopee One";
 }
+
+a {
+    font-family: "Roboto";
+}
+
+h2{
+    font-family: 'Otomanopee One';
+}
