--- a/FrontEnd/sass/main.scss
+++ b/FrontEnd/sass/main.scss
@@ -10,6 +10,8 @@
 // 3 - LAYOUT
 @import '3-Layout/_header';
 @import '3-Layout/_footer';
+@import '3-Layout/_produit';
+
 
 // 4 - COMPOSANTS
 @import '4-Composants/_boutons';
@@ -21,3 +23,4 @@
 
 // 6 - THEMES 
 @import '6-Themes/_pink';
+
