--- a/FrontEnd/sass/3-Layout/_footer.scss
+++ b/FrontEnd/sass/3-Layout/_footer.scss
@@ -1,3 +1,27 @@
-.reseauxSociaux {
+.footer__reseauxSociaux {
     display: flex;
+    justify-content: center
 }
+
+.reseauSocial {
+    margin: 1rem;
+}
+
+.separateur {
+    width: 100%;
+}
+.footer_container {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 3rem;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    padding-bottom: 0.3rem;
+}
+
