--- a/FrontEnd/sass/4-Composants/_icones.scss
+++ b/FrontEnd/sass/4-Composants/_icones.scss
@@ -3,7 +3,7 @@
     font-size: 1.5rem;
 }
 
-#twitter, #facebook, #instagram {
+#twitter, #facebook, #instagram, #youtube {
     font-size: 1.5rem;
     margin: 1rem;
     transition: all 1s ease-out;
