--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -108,7 +108,8 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 1400px;
+  margin-inline: auto;
+  max-width: 1400px;
 }
 
 .camera__Picture {
