--- a/FrontEnd/sass/3-Layout/_produit.scss
+++ b/FrontEnd/sass/3-Layout/_produit.scss
@@ -6,7 +6,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width: 1400px;
+    margin-inline: auto;
+    max-width: 1400px;
     
 }
 
