--- a/FrontEnd/sass/1-Base/_typography.scss
+++ b/FrontEnd/sass/1-Base/_typography.scss
@@ -42,3 +42,10 @@ h2 {
     font-family: "Roboto";
     font-weight: 700;
 }
+
+// Page Produit : Bouton Ajouter au panier 
+
+#btn-envoyer {
+    font-family: "Roboto";
+    font-weight: 600;
+}
