--- a/FrontEnd/sass/4-Composants/_icones.scss
+++ b/FrontEnd/sass/4-Composants/_icones.scss
@@ -12,3 +12,10 @@
         transform: scale(1.5);
     } 
 }
+
+// Icone du bouton "Ajouter au panier" : Page Secondaire 
+
+#fas-btn {
+    font-size: 1.01rem;
+    padding: 0.5rem;
+}
