--- a/FrontEnd/sass/4-Composants/_boutons.scss
+++ b/FrontEnd/sass/4-Composants/_boutons.scss
@@ -6,3 +6,38 @@
     width: 10rem;
     text-align-last: center;
 }
+
+// Ajouter au Panier - Page Secondaire 
+
+.bouton__Commander {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 200px;
+}
+
+#btn-envoyer {    
+    display: flex;
+    width: 175px;
+    height: 55px;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 1rem;
+    transition: 0.5s;
+    cursor: pointer;
+    background-size: 200%;
+    background-image: linear-gradient(
+        to  right, 
+        #edbc80,
+        #c09fef,
+        #edbc80
+    );
+
+    &:hover {
+        background-position: right;
+    }
+
+    &:active {
+        transform: scale(1.1);
+    }
+}
