--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -221,8 +221,8 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: none;
-  border-radius: 1rem;
+  border: 1;
+  border-radius: 2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
@@ -238,6 +238,8 @@ li {
 #btn-envoyer:active {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .fas {
