--- a/FrontEnd/sass/main.scss
+++ b/FrontEnd/sass/main.scss
@@ -11,6 +11,7 @@
 @import '3-Layout/_header';
 @import '3-Layout/_footer';
 @import '3-Layout/_produit';
+@import '3-Layout/_panier';
 
 
 // 4 - COMPOSANTS
