Création du Formulaire pour valider la commande
Création du Formulaire pour valider la commande

--- a/FrontEnd/sass/1-Base/_typography.scss
+++ b/FrontEnd/sass/1-Base/_typography.scss
@@ -67,6 +67,13 @@ h2 {
     font-weight: 600;
 }
 
+// Page Panier - Montant Total
+
+.panier__Total_Price {
+    font-family: "Roboto";
+    font-weight: 600;
+}
+
 // Page Panier - Déscription des produits 
 
 .panier__Description_typography {
