--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -54,6 +54,11 @@ h2 {
   font-weight: 600;
 }
 
+.panier__Total_Price {
+  font-family: "Roboto";
+  font-weight: 600;
+}
+
 .panier__Description_typography {
   font-family: "Roboto";
   font-weight: 400;
@@ -279,6 +284,10 @@ li {
   padding-top: 5rem;
 }
 
+.panier__Total_Price {
+  padding-bottom: 1rem;
+}
+
 #btn-Delete-Bucket {
   position: absolute;
   bottom: 10px;
@@ -307,6 +316,59 @@ li {
   display: -ms-flexbox;
   display: flex;
   margin: 2rem;
+}
+
+.panier__Picture_camera {
+  width: 300px;
+}
+
+#formulaireCommande {
+  border: 2px black solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #edbc80;
+}
+
+h2 {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+form input {
+  width: 25vw;
+  height: 21px;
+}
+
+form textarea {
+  width: 25vw;
+  height: 30px;
 }
 
 #option__Produit {
