--- a/FrontEnd/sass/3-Layout/_header.scss
+++ b/FrontEnd/sass/3-Layout/_header.scss
@@ -31,3 +31,22 @@ a {
     } 
 
 }
+
+
+// ********** Page - Confirmation Commande **********
+
+#main__Recapitulatif_Commande{
+    text-align: -webkit-center;
+    padding-bottom: 5rem;
+}
+
+.container__Recapitulatif_Commande{
+    width: 40vw;
+    border: 1px solid black;
+    padding-bottom: 1rem;
+
+}
+
+.recapitulatif__Commande_text{
+    text-align: center;
+}
