--- a/FrontEnd/sass/1-Base/_typography.scss
+++ b/FrontEnd/sass/1-Base/_typography.scss
@@ -67,6 +67,13 @@ h2 {
     font-weight: 600;
 }
 
+// Bouton - Page Panier - "envoyer Formulaire"
+
+#envoyerFormulaire {
+    font-family: "Roboto";
+    font-weight: 600;
+}
+
 // Page Panier - Montant Total
 
 .panier__Total_Price {
@@ -86,4 +93,21 @@ h2 {
 .main__Panier_Title {
     font-family: 'Otomanopee One';
     font-weight: 600;
+}
+
+// Formulaire pour passer la commande 
+
+label {
+    font-family: 'Otomanopee One';
+    font-weight: 400;
+}
+
+// Page Confirmation Commande 
+
+.recapitulatif__Commande_Numero {
+    font-weight: 900;
+}
+
+.recapitulatif__Commande_Price {
+    font-weight: 900;
 }
