--- a/FrontEnd/sass/4-Composants/_boutons.scss
+++ b/FrontEnd/sass/4-Composants/_boutons.scss
@@ -120,3 +120,36 @@
         transition: 1s;
     }
 }
+
+
+// Bouton du Formulaire pour passer la commande 
+
+#envoyerFormulaire {
+
+    display: flex;
+    margin: 30px;
+    width: 210px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border: 1;
+    border-radius: 2rem;
+    transition: 0.5s;
+    cursor: pointer;
+    background-size: 200%;
+    background-image: linear-gradient(
+        to  right, 
+        #edbc80,
+        #c09fef,
+        #edbc80
+    );
+
+    &:hover {
+        background-position: right;
+    }
+
+    &:active {
+        transform: scale(1.1);
+        transition: 1s;
+    }
+}
