--- a/FrontEnd/sass/3-Layout/_panier.scss
+++ b/FrontEnd/sass/3-Layout/_panier.scss
@@ -113,7 +113,7 @@
     background-color: lavender;
 }
 
-h2 {
+.formulaireCommande__Title {
     align-items: center;
     align-content: center;
     text-align: center;
