--- a/FrontEnd/sass/4-Composants/_boutons.scss
+++ b/FrontEnd/sass/4-Composants/_boutons.scss
@@ -28,9 +28,9 @@
     background-size: 200%;
     background-image: linear-gradient(
         to  right, 
-        #edbc80,
-        #c09fef,
-        #edbc80
+        $first-color-buttun,
+        $second-color-buttun,
+        $first-color-buttun
     );
 
     &:hover {
@@ -70,9 +70,9 @@
     background-size: 200%;
     background-image: linear-gradient(
         to  right, 
-        #edbc80,
-        #c09fef,
-        #edbc80
+        $first-color-buttun,
+        $second-color-buttun,
+        $first-color-buttun
     );
 
     &:hover {
@@ -106,9 +106,9 @@
     background-size: 200%;
     background-image: linear-gradient(
         to  right, 
-        #edbc80,
-        #c09fef,
-        #edbc80
+        $first-color-buttun,
+        $second-color-buttun,
+        $first-color-buttun
     );
 
     &:hover {
@@ -139,9 +139,9 @@
     background-size: 200%;
     background-image: linear-gradient(
         to  right, 
-        #edbc80,
-        #c09fef,
-        #edbc80
+        $first-color-buttun,
+        $second-color-buttun,
+        $first-color-buttun
     );
 
     &:hover {
