--- a/FrontEnd/sass/main.scss
+++ b/FrontEnd/sass/main.scss
@@ -12,6 +12,7 @@
 @import '3-Layout/_footer';
 @import '3-Layout/_produit';
 @import '3-Layout/_panier';
+@import '3-Layout/_responsive';
 
 
 // 4 - COMPOSANTS
@@ -19,8 +20,6 @@
 @import '4-Composants/_icones';
 
 // 5 - PAGES
-@import '5-Pages/_header';
-
 
 // 6 - THEMES 
 @import '6-Themes/_pink';
