--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -92,6 +92,39 @@ body {
   padding: 0;
 }
 
+.logoPosition {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.logo {
+  width: 640px;
+  height: 320px;
+  padding-bottom: 5rem;
+}
+
+@media screen and (min-width: 500px) {
+  .logo {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .logo {
+    width: 550px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .logo {
+    width: 650px;
+  }
+}
+
 .navMenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -99,6 +132,22 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+@media screen and (min-width: 500px) {
+  .navMenu {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .navMenu {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 
 .navMenu ul {
@@ -168,6 +217,31 @@ a {
   padding-bottom: 3rem;
 }
 
+@media screen and (min-width: 500px) {
+  .footer_container {
+    margin: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 500px) and (min-width: 900px) {
+  .footer_container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .footer_container .footer__about, .footer_container .footer__informations, .footer_container .footer__contact {
+    text-align: center;
+  }
+}
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -197,6 +271,25 @@ li {
   max-width: 1400px;
 }
 
+@media screen and (min-width: 700px) {
+  .main__Produit {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .main__Produit {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 5rem;
+  }
+}
+
 .camera__Picture {
   width: 360px;
   height: 240px;
@@ -216,6 +309,13 @@ li {
   height: 421px;
   margin-right: 5rem;
   margin-bottom: 5rem;
+}
+
+@media screen and (min-width: 500px) {
+  .camera__article {
+    margin: auto;
+    padding-bottom: 3rem;
+  }
 }
 
 .camera__Price {
@@ -378,7 +478,7 @@ li {
   background-color: lavender;
 }
 
-h2 {
+.formulaireCommande__Title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -624,60 +724,6 @@ form textarea {
   color: mediumslateblue;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.logoPosition {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.logo {
-  width: 640px;
-  height: 320px;
-  padding-bottom: 5rem;
-}
-
-.navMenu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.navMenu ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.navMenu li {
-  margin: 1.5rem;
-  list-style-type: none;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-.acolor {
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-}
-
-.acolor:hover {
-  color: mediumslateblue;
 }
 
 body {
