--- a/FrontEnd/sass/3-Layout/_header.scss
+++ b/FrontEnd/sass/3-Layout/_header.scss
@@ -71,6 +71,12 @@ a {
     width: 40vw;
     border: 1px solid black;
     padding-bottom: 1rem;
+    @include responsive(tablet-up) {
+        width: 90vw;
+        @include responsive(desktop) {
+            width: 40vw;
+        } 
+    }
 
 }
 
